style: single to double quotes & chore: change variable name static_page controller

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,7 @@ AllCops:
   # Include common Ruby source files.
   Include:
     - '**/*.rb'
+    - '**/*.erb'
     - '**/*.arb'
     - '**/*.axlsx'
     - '**/*.builder'
