--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -164,3 +164,11 @@ test:
         max_pool_size: 1
   options:
     raise_not_found_error: false
+production:
+  clients:
+    default:
+      database: project_demo_production
+      hosts:
+        - mongodb+srv://nsqa:1@cluster0.aybxh.mongodb.net/project_demo_production?retryWrites=true&w=majority
+      username: nsqa
+      password: 1
